# early-dropout-detection-online-courses

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  styles.css
models/: dropout_model.joblib
scripts/: explore_data.py  make_predictions.py  predict_manual.py  stop-dev.ps1  train_model.py
server/: .env.example  package-lock.json  package.json
server/src/: index.js  predictor.js
server/src/routes/: predictions.js
src/dropout_detection/: __init__.py  data.py  explore.py  features.py  manual_predict.py  predict.py  train.py
